--- a/news.html
+++ b/news.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Усик заявив, що не погодиться на можливу пропозицію про відтермінування бою з Ф’юрі</h1>
-    <p>Сьогодні, 19:28</p>
+    <p>Сьогодні, 19:28.</p>
     <img src = "img/news.jpg">
         <p>Чемпіон WBA, WBO, IBO та IBF у надважкій вазі Олександр Усик (<i>21-0, 14</i> КО) розповів, чи погодиться на перенесення бою з володарем титулу WBC Тайсоном Ф’юрі (34-0-1, 24 КО).</p>
 
