--- a/news.html
+++ b/news.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Новина</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Усик заявив, що не погодиться на можливу пропозицію про відтермінування бою з Ф’юрі</h1>
-    <p>Сьогодні, 19:28.</p>
+    <p class = "datetime">Сьогодні, 19:28.</p>
     <img src = "img/news.jpg">
-        <p>Чемпіон WBA, WBO, IBO та IBF у надважкій вазі Олександр Усик (<i>21-0, 14</i> КО) розповів, чи погодиться на перенесення бою з володарем титулу WBC Тайсоном Ф’юрі (34-0-1, 24 КО).</p>
+        <p>Чемпіон WBA, WBO, IBO та IBF у надважкій вазі <span class="name">Олександр Усик</span> (<i>21-0, 14</i> КО) розповів, чи погодиться на перенесення бою з володарем титулу WBC Тайсоном Ф’юрі (34-0-1, 24 КО).</p>
 
     <p>– Коли <b>Френк Воррен</b> скаже, що треба відтермінувати бій, як ти відреагуєш?</p>
 
