--- a/news3.html
+++ b/news3.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style2.css">
 </head>
 <body>
-    <h1>Наша новина</h1>
+    <h1>Наша новина!</h1>
     <img src="img/bbc.png" alt="BBC" title="BBC" class = "image">
     <p class = "first">Наша новина дуже цікава, та має багато просмотрів.</p>
     <p>Lorem ipsum <span class = "word">dolor</span>, sit amet consectetur adipisicing <span class = "word">elit</span>. Voluptates minus, vero accusamus dicta eveniet maxime recusandae neque hic. Modi libero nesciunt neque voluptatum voluptatem consectetur enim, vitae doloribus veniam eveniet.</p>
